fix: Odd spacing between taxonomy tags

--- a/themes/statusline/assets/sass/components/_taxonomy.scss
+++ b/themes/statusline/assets/sass/components/_taxonomy.scss
@@ -17,10 +17,6 @@ $taxonomy-tags-color: $yellow !important;
 	li {
 		list-style: none;
 		margin: 0.2rem;
-
-		@include media( ">=phone", "<tablet" ) {
-			margin-left: 2rem;
-		}
 	}
 }
 
